[package]
name = "level-generator"
version = "0.1.0"
edition = "2021"
authors = ["Mark Nichols"]
description = "Procedural level generator with classic dungeons, marble rolling tracks, and WFC mazes"
repository = "https://github.com/sogh/level-generator"
license = "MIT"
keywords = ["procedural", "generator", "dungeon", "marble", "roguelike"]
categories = ["game-development", "algorithms"]
readme = "README.md"

[lib]
name = "level_generator"
path = "src/lib.rs"

[[bin]]
name = "level-generator"
path = "src/main.rs"
required-features = ["cli"]

[dependencies]
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
clap = { version = "4.5.48", features = ["derive"], optional = true }

[features]
default = ["cli"]
cli = ["clap"]
